--- a/src/app/pages/components/actividad-m1/actividad-m1.component.html
+++ b/src/app/pages/components/actividad-m1/actividad-m1.component.html
@@ -1,28 +1,28 @@
 <section class="modulo1">
-  <div class="row">
-    <div class="modulo1-content col-6 d-flex flex-column align-items-center justify-content-center">
+  <div class="row" style="--bs-gutter-x: 0rem;">
+    <div class="modulo1-content col-sm-12 col-md-6 d-flex flex-column align-items-center justify-content-center"
+        style="--bs-gutter-x: 0rem;"
+        id="targetElement">
       <h2>MÓDULO 1</h2>
       <p>INTRODUCCIÓN AL</p>
       <p>COOPERATIVISMO</p>
     </div>
-      <div class="col-6">
-        <div class="d-flex flex-column align-items-center justify-content-center">
+      <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
           <img src="assets/imagenPrueba.svg" alt="">
-        </div>
       </div>
   </div>
 </section>
 
 <section class="objetivo_general">
-  <div class="row">
-    <div class="col-6 align-items-center justify-content-center">
-      <div class="">
-        <img src="assets/imagenPrueba2.svg" alt="">
-      </div>
+  <div class="row flex-md-row" style="--bs-gutter-x: 0rem;">
+    <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center" style="--bs-gutter-x: 0rem;">
+
+        <img class="animate__animated animate__pulse animate__infinite animate__slow" src="assets/imagenPrueba2.svg" alt="">
+
     </div>
-    <div class="col-6  d-flex flex-column align-items-center justify-content-center">
+    <div class="objetivo__general_text col-sm-12 col-md-6 text-center d-flex flex-column align-items-center justify-content-center" style="--bs-gutter-x: 0rem;">
       <h2>OBJETIVO GENERAL</h2>
-      <p class="text-center">Lograr que los participantes
+      <p>Lograr que los participantes
         conozcan el Cooperativismo,
         para comprender desde su
         origen hasta la actualidad de
@@ -36,8 +36,8 @@
 
 <section class="tema">
   <div class="bgpapel">
-    <h2>TEMA</h2>
-    <ul>
+    <h2 class="text-center text-md-start">TEMA</h2>
+    <ul class="text-center text-md-start">
       <li>¿Qué es el Cooperativismo?</li>
       <li>Antecedentes históricos del Cooperativismo</li>
       <li>Actividad: Crucigrama</li>
@@ -50,78 +50,88 @@
 <div class="gradient2"></div>
 
 <section class="introduccion">
-  <div class="int-content text-center">
-    <h2>INTRODUCCIÓN</h2>
-    <p>A través de la historia los valores de
-      solidaridad, colectivimo y acción
-      común han estado presentes en la
-      organización económica de las
-      sociedades, aunque no es hasta el
-      siglo XIX cuando con la formulación
-      de principios y una filosofía basados
-      en la concepción social que propone
-      la cooperación y apoyo mutuo entre
-      individuos que, previamente han
-      acordado asociarse libre y
-      voluntariamente para satisfacer sus
-      necesidades económicas, sociales y
-      culturales, siendo así como poco a
-      poco se conformó el Cooperativismo.
+  <div class="row">
+    <div class="int-content col-sm-12 col-md-6 text-center">
+      <h2>INTRODUCCIÓN</h2>
+      <p>A través de la historia los valores de
+        solidaridad, colectivimo y acción
+        común han estado presentes en la
+        organización económica de las
+        sociedades, aunque no es hasta el
+        siglo XIX cuando con la formulación
+        de principios y una filosofía basados
+        en la concepción social que propone
+        la cooperación y apoyo mutuo entre
+        individuos que, previamente han
+        acordado asociarse libre y
+        voluntariamente para satisfacer sus
+        necesidades económicas, sociales y
+        culturales, siendo así como poco a
+        poco se conformó el Cooperativismo.
 
-      De esta forma comprender cómo, por
-      qué y dónde se inició el pensamiento
-      cooperativista, las distintas doctrinas
-      filosóficas que generaron la creación
-      de Cooperativas en numerosas partes
-      del planeta. Además, los beneficios
-      de una adecuada administración del
-      dinero para mejorar la calidad de vida
-      de una persona y su familia.</p>
+        De esta forma comprender cómo, por
+        qué y dónde se inició el pensamiento
+        cooperativista, las distintas doctrinas
+        filosóficas que generaron la creación
+        de Cooperativas en numerosas partes
+        del planeta. Además, los beneficios
+        de una adecuada administración del
+        dinero para mejorar la calidad de vida
+        de una persona y su familia.</p>
+    </div>
+    <div class="col-sm-12 col-md-6 d-flex align-items-center justify-content-center">
+      <img src="assets/pig-pink.png" alt="">
+    </div>
   </div>
 </section>
 
 <section class="que_es_cooperativismo">
-  <h2>¿QUÉ ES EL COOPERATIVISMO?</h2>
-  <p>Es un movimiento socioeconómico basado en
-    valores y principios de igualdad y equidad. Las
-    personas se organizan y asocian voluntariamente
-    en empresas Cooperativas de propiedad conjunta
-    y democráticamente controladas para hacer
-    frente a sus necesidades y aspiraciones
-    económicas, sociales y culturales. Para lograr esto,
-    sus Socios deben estar en un constante aprendizaje
-    de los procesos asociativos y económicos del
-    modelo cooperativo, además, deben conocer las
-    bases legales y los procesos de operación.
+  <div class="hojaback">
+    <h2 class="text-end p-3">¿QUÉ ES EL COOPERATIVISMO?</h2>
+    <p class="text-end">Es un movimiento socioeconómico basado en
+      valores y principios de igualdad y equidad. Las
+      personas se organizan y asocian voluntariamente
+      en empresas Cooperativas de propiedad conjunta
+      y democráticamente controladas para hacer
+      frente a sus necesidades y aspiraciones
+      económicas, sociales y culturales. Para lograr esto,
+      sus Socios deben estar en un constante aprendizaje
+      de los procesos asociativos y económicos del
+      modelo cooperativo, además, deben conocer las
+      bases legales y los procesos de operación.
 
-    Este modelo da oportunidad a las personas de
-    escasos recursos, ad tener una empresa de
-    propiedad en conjunto. Uno de los propósitos de
-    este sistema, es eliminar la explotación de los
-    individuos o empresas, por otros dedicados a
-    obtener ganancias.
+      Este modelo da oportunidad a las personas de
+      escasos recursos, ad tener una empresa de
+      propiedad en conjunto. Uno de los propósitos de
+      este sistema, es eliminar la explotación de los
+      individuos o empresas, por otros dedicados a
+      obtener ganancias.
 
-    La participación del ser humano, asumiendo un rol
-    protagonista en los procesos socioeconómicos en
-    la comunidad en que vive, es la principal fortaleza
-    de la doctrina cooperativista y esta se rige por
-    valores y principios basados en el desarrollo integral
-    del ser humano y no solo con propósitos
-    económicos.</p>
+      La participación del ser humano, asumiendo un rol
+      protagonista en los procesos socioeconómicos en
+      la comunidad en que vive, es la principal fortaleza
+      de la doctrina cooperativista y esta se rige por
+      valores y principios basados en el desarrollo integral
+      del ser humano y no solo con propósitos
+      económicos.</p>
 
-  <h2>ANTECEDENTES HISTÓRICOS DEL
-    COOPERATIVISMO.</h2>
-  <p>La historia del Cooperativismo comienza en épocas remotas, cuando
+      <div class="hojasup p-5">
+        <h2 class="text-center">ANTECEDENTES HISTÓRICOS DEL
+          COOPERATIVISMO.</h2>
+        <p>La historia del Cooperativismo comienza en épocas remotas, cuando
 
-    se produjeron expresiones que podríamos llamar “pre cooperativas”.
+          se produjeron expresiones que podríamos llamar “pre cooperativas”.
 
-    Se ha llegado a decir que la humanidad y la cooperación tienen la
-    misma historia, ya sea voluntaria, coaccionada o forzada, se han
-    encontrado sistemas de organización con ciertos caracteres de
-    cooperación y participación igudlitaria en la prehistoria, como tribus |
-    con propiedad conjunta de bienes y actividades básicas de caza,
-    pesca, entre otras, realizadas por grupos para alcanzar un bien
-    común. </p>
+          Se ha llegado a decir que la humanidad y la cooperación tienen la
+          misma historia, ya sea voluntaria, coaccionada o forzada, se han
+          encontrado sistemas de organización con ciertos caracteres de
+          cooperación y participación igudlitaria en la prehistoria, como tribus |
+          con propiedad conjunta de bienes y actividades básicas de caza,
+          pesca, entre otras, realizadas por grupos para alcanzar un bien
+          común. </p>
+      </div>
+
+  </div>
 </section>
 
 <section class="edades">
